--- a/LocalAiDemo/LocalAiDemo.Shared/Layout/NavMenu.razor
+++ b/LocalAiDemo/LocalAiDemo.Shared/Layout/NavMenu.razor
@@ -18,11 +18,13 @@
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
+        </div>        <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            </NavLink>
+        </div>        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="vector-admin">
+                <span class="bi bi-gear-fill-nav-menu" aria-hidden="true"></span> Vector Admin
             </NavLink>
         </div>
     </nav>
