--- a/LocalAiDemo/LocalAiDemo.Shared/_Imports.razor
+++ b/LocalAiDemo/LocalAiDemo.Shared/_Imports.razor
@@ -6,4 +6,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using Microsoft.Extensions.Logging
 @using LocalAiDemo.Shared.Services
+@using LocalAiDemo.Shared.Models
